Тесты постмана пройдены